--- a/Mandel.bib
+++ b/Mandel.bib
@@ -31078,3 +31078,37 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{MaardlingAarseth:2001,
+       author = {{Mardling}, Rosemary A. and {Aarseth}, Sverre J.},
+        title = "{Tidal interactions in star cluster simulations}",
+      journal = {\mnras},
+     keywords = {GRAVITATION, STELLAR DYNAMICS, BINARIES: CLOSE, STARS: EVOLUTION, STARS: MASS-LOSS, OPEN CLUSTERS AND ASSOCIATIONS: GENERAL, gravitation, stellar dynamics, binaries: close, stars: evolution, stars: mass-loss, open clusters and associations: general},
+         year = 2001,
+        month = mar,
+       volume = {321},
+       number = {3},
+        pages = {398-420},
+          doi = {10.1046/j.1365-8711.2001.03974.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2001MNRAS.321..398M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Racine:2008,
+       author = {{Racine}, {\'E}tienne},
+        title = "{Analysis of spin precession in binary black hole systems including quadrupole-monopole interaction}",
+      journal = {\prd},
+     keywords = {04.25.Nx, 04.30.Db, Post-Newtonian approximation, perturbation theory, related approximations, Wave generation and sources, General Relativity and Quantum Cosmology, Astrophysics},
+         year = 2008,
+        month = aug,
+       volume = {78},
+       number = {4},
+          eid = {044021},
+        pages = {044021},
+          doi = {10.1103/PhysRevD.78.044021},
+archivePrefix = {arXiv},
+       eprint = {0803.1820},
+ primaryClass = {gr-qc},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008PhRvD..78d4021R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
