--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -402,9 +402,9 @@ Following such a 3-body interaction, the binary itself must recoil in the opposi
 
 \subsection{System Properties}
 \subsubsection{Masses}
-The masses of black holes in the binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years, as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit, and the massive companion will only survive as a non-degenerate potential donor star for a small fraction of that time (but see \cite{Eldridge:2017,Bavera:2020,vanSon:2020}, who allow super-Eddington accretion). No further accretion is expected in the system after the second compact object is formed. The mass of each black hole is thus almost equal to its mass at formation. 
+The masses of black holes in the binaries of interest will not change appreciably after the black holes are formed by stellar collapse or supernova explosions.  The first black hole to form is unlikely to accrete a significant amount of mass from its companion: doubling its mass would take more than 100 million years, as the mass-gain rate is $\dot{M}/M \lesssim 10^{-8}$ yr$^{-1}$ at the Eddington limit, and the massive companion will only survive as a non-degenerate potential donor star for a small fraction of that time (though some models allow super-Eddington accretion \cite{Eldridge:2017,Bavera:2020,vanSon:2020}). No further accretion is expected in the system after the second compact object is formed, except in very gas rich environments like active galactic nuclei. The mass of each black hole is thus almost equal to its mass at formation. 
 
-The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching most observations to date \citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to arise in low-metallicity environments, and to make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in section \ref{environ} below. 
+The classical isolated binary evolution channel can produce binary black holes with a broad range of masses, matching most observations to date \citep[e.g.,][]{Stevenson:2017,Eldridge:2017,GiacobboMapelli:2018} as well as GW170817 and the observed Galactic double neutron stars \citep[e.g.,][]{Kruckow:2018,VignaGomez:2018}.  In fact, contrary to mistaken lore, the high masses of the first observed black holes were not entirely surprising: such systems were predicted to form in low-metallicity environments and to make a significant contribution to the detected population because more massive binaries emit more energy in gravitational waves \citep{Dominik:2014}; the effect of metallicity is discussed further in section \ref{environ} below. 
 
 Dynamical formation in globular clusters can also lead to a range of masses, but may favour more massive binaries: lighter black holes would be ejected by heavier ones in three-body interactions \citep{Rodriguez:2015}. The mass distribution is sensitive to natal kicks, which may eject black holes at formation \citep{Zevin:2017}.  For example, \citet{Chatterjee:2017} argued that dynamical formation could explain most black-hole binary merger observations, with old, metal-poor clusters preferentially contributing more massive black-hole binaries and younger, metal-rich clusters contributing lighter binaries.
  
@@ -415,11 +415,11 @@ One challenge for all of these channels is explaining merging components above $
 Very asymmetric binaries, particularly GW190814, present another challenge for most evolutionary channels \citep{Zevin:2020,Mandel:2020}; one recently proposed scenario relies on the possibility that some massive progenitors may leave light remnants behind, particularly if their explosibility is enhanced by a change in compactness due to previous episodes of mass transfer \citep{Antoniadis:2021}.  
 
 \subsubsection{Mass ratios}
-The mass ratios of merging black-hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer. However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}.
+The mass ratios of most merging black-hole binaries produced through the isolated binary evolution channel are likely to be on the equal side of $2:1$, because of the mass ratio constraints necessary to ensure stable mass transfer from the primary to the secondary and then dynamically unstable reverse mass transfer.   However, mass ratios exceeding $2:1$ are expected to be more common at low metallicity \citep{Dominik:2012,Stevenson:2017}, and the strict mass ratio constraint may in fact apply to black-hole binaries that only experience stable mass transfer episodes \citep{vanSon:2021}.
 
 Dynamically formed binaries may also favour comparable masses because the heaviest black holes in a cluster are most likely to merge, though more extreme mass ratios are also possible if the globular cluster contains a particularly heavy stellar-mass black hole or a $\gtrsim 100 M_\odot$ intermediate-mass black hole \citep{Mandel:2008,Belczynski:2014VMS}. 
 
-Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016,Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
+Chemically homogeneous evolution has a much stronger preference for equal masses \citep{MandeldeMink:2016}.  \citet{Marchant:2016} and \citet{Riley:2020} concluded that nearly equal-mass black holes would be produced from the evolution of systems that were in contact (shared mass) on the main sequence, before disengaging during subsequent phases of chemically homogeneous evolution and proceeding along the pathway sketched out in section \ref{form:CHE}. 
 
 \subsubsection{Black-hole spin magnitudes and directions}\label{BHspins}
 The spins of merging black holes may carry imprints of their evolutionary history. 
@@ -428,21 +428,21 @@ Isolated binaries, including those formed through chemically homogeneous evoluti
 
 Spin magnitudes may also depend sensitively on evolutionary history.  A massive star may contain a large amount of angular momentum, far in excess of the maximum allowed for a spinning black hole. However, the vast majority of that angular momentum will be contained in the outer layers of the star and can therefore readily be lost through winds or via envelope stripping by a companion.  Therefore, black holes formed from stars that were rapidly spinning at some point in their evolution may still spin slowly unless the stars are spun up through mass transfer or tides shortly before collapse \citep{Kushnir:2016,HotokezakaPiran:2017,Zaldarriaga:2017}, or, less likely, during the supernova itself \citep{Batta:2017,Schroeder:2018}.   Consequently, if angular momentum transport within a star is at least moderately efficient, we may expect that the first-formed black hole in an isolated binary will always be slowly spinning, while the second-born black hole will be rapidly spinning only in the tightest binaries, when its helium star progenitor can be spun up through tides \citep{Bavera:2019,Belczynski:2020,MandelFragos:2020,Bavera:2021,OlejakBelczynski:2021}.
 
-This argument for slowly spinning black holes in compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{MillerMiller:2015}.     As discussed in section \ref{sec:XRB}, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones. Moreover, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see section \ref{environ}]{HotokezakaPiran:2017}.  In particular, black holes in high-mass X-ray binaries such as Cygnus X-1 could be spun up during mass transfer late in the primary's main sequence, when the core and envelope are still strongly coupled \citep{Qin:2018}.  Such systems may then be unlikely to produce merging black holes as they are too close to experience a common envelope and too wide to merge without one \citep{Neijssel:2020CygX1}, though some fraction could still merge through fortuitous natal kicks of the secondary, possibly explain the spin precession of GW151226 \citep[][but see \cite{GW151226,MateuLucena:2021}]{Chia:2021}.
+This argument for slowly spinning black holes in merging compact binaries is potentially in conflict with the claimed observations of rapid spins in black-hole high mass X-ray binaries \citep{FishbachKalogera:2021}.   However, there may be significant differences in the evolutionary channels and environments of the locally observed high-mass X-ray binaries and the binary black holes observed in gravitational waves \citep[][and see section \ref{environ}]{HotokezakaPiran:2017}.  In particular, black holes in high-mass X-ray binaries such as Cygnus X-1 could be spun up during mass transfer late in the primary's main sequence, when the core and envelope are still strongly coupled \citep{Valsecchi:2010,Qin:2018}.  Such systems may then be unlikely to produce merging black holes as they are too close to experience a common envelope and too wide to merge without one \citep{Neijssel:2020CygX1}, though some fraction could still merge through fortuitous natal kicks of the secondary, possibly explain the spin precession of GW151226 \citep{Chia:2021} (but see \cite{GW151226,MateuLucena:2021}).  Moreover, as discussed in section \ref{sec:XRB}, the spin magnitude measurements in X-ray binaries could be very sensitive to the modelling assumptions, and the systematic errors may dominate the statistical ones.
 
-As discussed in section \ref{sec:GWevents}, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events.  Gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins, with the latter being the hallmark of isolated binary evolution.  The diverging conclusions regarding the fraction of preferentially spin-aligned binaries  \citep{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parameterised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that80\% of observed binaries have non-spinning black holes while 20\% have moderate spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components and the degree of spin precession remain open issues. 
+Meanwhile, there is active debate in the literature about the black-hole spin distribution of gravitational-wave events (see section \ref{sec:GWevents}).  Among spin variables that remain approximately constant during the inspiral, gravitational-wave spin measurements most accurately constrain the effective spin $\chi_\mathrm{eff}$ \citep{Racine:2008,Ajith:2011}, which enters the phasing of gravitational waves at the 1.5 post-Newtonian order \citep{PoissonWill:1995}.  Low values of $\chi_\mathrm{eff}$ could point to either low spin magnitudes or isotropically directed spins, with the latter being the hallmark of isolated binary evolution.  The diverging conclusions regarding the fraction of preferentially spin-aligned binaries  \citep{GWTC2:pop,GWTC3:pop,Roulet:2021,Callister:2021,Galaudage:2021} appear to be a consequence of the chosen parameterised model, which may be mis-specified in some cases.  At face value, the absence of confidently negative measurements of $\chi_\mathrm{eff}$ and the roughly one fifth fraction of observed binaries with positive $\chi_\mathrm{eff}$ inconsistent with zero suggest that 80\% of observed binaries contain non-spinning black holes while 20\% have moderate net spin in the direction of the orbital angular momentum.  This appears consistent with isolated binary evolution with occasional tidal spin-up as the dominant channel.  The distribution of spin between binary components, the degree of spin precession, and possible correlations between spins and masses remain open issues. 
 
 \subsubsection{Orbital eccentricities}
-	The orbital eccentricities of merging black-hole binaries may contain information about their past \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep[][but see \cite{Tsang:2013}]{OLeary:2008}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.  We discussed the exciting indications of possible measurements of non-zero eccentricity \citep{RomeroShaw:2021} in section \ref{sec:GWevents}.
+	The orbital eccentricities of merging black-hole binaries may contain information about their previous evolution \citep{MandelOShaughnessy:2010}. Because gravitational waves are very efficient at damping out orbital eccentricity, isolated binaries are expected to merge on circular orbits. Dynamically formed systems may, however, retain detectable eccentricities at merger if their orbits are very tight at formation: the periapsis of a highly eccentric binary would need to be $\lesssim 10^4$ km in order for the eccentricity to exceed 0.1 when the gravitational-wave frequency reaches the minimum of the detector sensitivity band at 10 Hz.  Dynamical formation of very tight binaries may be possible through two-body captures in Galactic nuclei \citep[][but see \cite{Tsang:2013}]{OLeary:2008}; in some hierarchical triples evolving through the Lidov-Kozai mechanism \citep[e.g.,][]{AntoniniPerets:2012}; or through close captures during three-body interactions \citep{Samsing:2014, Rodriguez:2018}.  We discussed the exciting indications of possible measurements of non-zero eccentricity \citep{RomeroShaw:2021} in section \ref{sec:GWevents}.
 
 
 \subsubsection{Formation environments}
 \label{environ}
-The evolutionary history of merging black holes is also dependent on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black-hole mass.
+The evolutionary history of merging black holes also depends on their formation environments, particularly through the effect of chemical composition (metallicity) on stellar evolution and thereby black-hole mass.
 
 Black-hole masses are set by the mass of the parent star at the end of stellar evolution, preceding the collapse or supernova explosion, and by the amount of ejecta during the supernova. Observational evidence and collapse models suggest that sufficiently massive stellar cores may completely collapse into black holes \citep[for a review, see][]{Mirabel:2016}. Thus, the mass of the stellar core --- the convective region in the centre of the star where nuclear fusion proceeds from hydrogen through helium, carbon, oxygen, and so on to iron --- determines the ultimate black-hole mass.  If left unperturbed, a third to a half of the mass of a massive star will end up in a carbon--oxygen core, and thereby in the black-hole remnant.
 
-The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017}, simulations suggest that at the 2\% metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black\ilya{-}hole masses are only around $15 M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the dependence of compact remnant mass on metallicity. 
+The intense radiation from massive stars with luminosities $\gtrsim 10^5 L_\odot$ drives significant winds, which can remove a large amount of material from the star. The mass of the star at the end of stellar evolution can thus be much lower than the star's initial mass, and the mass of the resulting compact object can therefore be much lower than $1/3$ of the initial stellar mass. Metals like iron, with their many absorption lines, are particularly efficient at capturing the stellar radiation and transforming it into outward momentum.  Therefore, the metal fraction, or metallicity  --- the fraction $Z$ of the star's mass contained in elements heavier than hydrogen and helium --- is a key ingredient in determining stellar wind mass loss rates \citep{Vink:2001,Sander:2020}. Although wind models are uncertain \citep[e.g.,][]{Renzo:2017,Vink:2017}, simulations suggest that at the 2\% metallicity of our solar neighbourhood, massive stars lose enough mass via winds that maximum black-hole masses are only around 15--20 $M_\odot$ \citep{Belczynski:2009,Spera:2015}. This matches the masses of black holes observed in X-ray binaries. Figure \ref{fig:BHremnant} illustrates the possible dependence of compact remnant mass on metallicity. 
  
 \begin{figure}
 	\centering
